# ha-eboks

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/eboks/: __init__.py  api.py  auth_callback.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  mitid_auth.py  mobile_api.py  sensor.py  services.py  services.yaml  strings.json
custom_components/eboks/translations/: da.json  en.json
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_diagnostics.py  test_init.py  test_sensor.py
tools/: get_eboks_token.py
